- adds description for generator endpoint
